4.0.0 fails to compile library and crashes on Intel Mac with AMD GPUs on Cycles / GPU Compute (macOS Monterey) #108240

Closed
opened 2023-05-24 20:38:55 +02:00 by Caco Oportot · 11 comments

System Information
Operating system: macOS Monterey 12.6.6 (21G646), 12.6.4 (21G526)
Graphics card: AMD FirePro D500 3 GB

Mac Pro (Late 2013)
2,7 GHz 12-Core Intel Xeon E5
64 GB 1866 MHz DDR3
AMD FirePro D500 3 GB

Blender Version
Broken: 4.0.0, ba3f26fac5, main, 05-24-2023
Worked: 4.0.0, 0f87bdfd8f, main, 05-23-2023

Short description of error

Blender crashes on render and error on viewport with Cycles when GPU Compute enabled.

Problem seems to be introduced by this commit 905d1c71b9, from this pull #108195 as it exhibits the same behaviour on PR108195 daily build

Screen Shot 2023-05-24 at 14.18.33.png
Screen Shot 2023-05-23 at 23.41.14.png

Exact steps for others to reproduce the error

Launch Blender on default cube scene
Go to Render Properties and select Cycles and GPU Compute
Change Viewport Shading to Rendered... Error and wont render preview.

Also crashes on Render (fn +F12) with no crash report.

**System Information** Operating system: macOS Monterey 12.6.6 (21G646), 12.6.4 (21G526) Graphics card: AMD FirePro D500 3 GB Mac Pro (Late 2013) 2,7 GHz 12-Core Intel Xeon E5 64 GB 1866 MHz DDR3 AMD FirePro D500 3 GB **Blender Version** Broken: 4.0.0, ba3f26fac58e, main, 05-24-2023 Worked: 4.0.0, 0f87bdfd8f6f, main, 05-23-2023 **Short description of error** Blender crashes on render and error on viewport with Cycles when GPU Compute enabled. Problem seems to be introduced by this commit 905d1c71b9, from this pull #108195 as it exhibits the same behaviour on [PR108195](https://builder.blender.org/download/patch/PR108195) daily build ![Screen Shot 2023-05-24 at 14.18.33.png](/attachments/245b6f6a-7bb0-4ae4-a3ef-712ac17ad245) ![Screen Shot 2023-05-23 at 23.41.14.png](/attachments/fea352a9-6f91-46ce-98fa-23305db246b2) **Exact steps for others to reproduce the error** Launch Blender on default cube scene Go to Render Properties and select Cycles and GPU Compute Change Viewport Shading to Rendered... Error and wont render preview. Also crashes on Render (fn +F12) with no crash report.
Caco Oportot added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-24 20:38:55 +02:00
Author
FYI: @Sergey @brecht

It's probably not introduced by that specific pull request, it could be any change in the light linking branch.

I suspect it's because __LIGHT_TREE__ or another define that is disabled on AMD, which then affects the #includes in a way that breaks things.

It's probably not introduced by that specific pull request, it could be any change in the light linking branch. I suspect it's because `__LIGHT_TREE__` or another define that is disabled on AMD, which then affects the #includes in a way that breaks things.
Brecht Van Lommel added this to the 4.0 milestone 2023-05-24 22:00:44 +02:00

iMac (Retina 5K, 27-inch, 2020)
3.6 GHz 10-Core Intel Core i9
128 GB 2667 MHz DDR4
AMD Radeon Pro 5500 XT 8 GB

I get the exact same error with a Metal backend and with an OpenGL backend

iMac (Retina 5K, 27-inch, 2020) 3.6 GHz 10-Core Intel Core i9 128 GB 2667 MHz DDR4 AMD Radeon Pro 5500 XT 8 GB I get the exact same error with a Metal backend and with an OpenGL backend

I've managed to reproduce a compilation failure on M2 by disabling MNEE and light trees. Hopefully it is the same root cause for AMD.

Created a PR #108264

I've managed to reproduce a compilation failure on M2 by disabling MNEE and light trees. Hopefully it is the same root cause for AMD. Created a PR #108264
Sergey Sharybin self-assigned this 2023-05-25 11:22:22 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-25 13:55:06 +02:00
Author

I've managed to reproduce a compilation failure on M2 by disabling MNEE and light trees. Hopefully it is the same root cause for AMD.

Created a PR #108264

I confirm that PR #108264 fixed the issue on my machine too. Thank you very much @Sergey

> I've managed to reproduce a compilation failure on M2 by disabling MNEE and light trees. Hopefully it is the same root cause for AMD. > > Created a PR #108264 I confirm that PR #108264 fixed the issue on my machine too. Thank you very much @Sergey

where do I find MNEE - I do not see it ubder Object => Visibility

where do I find MNEE - I do not see it ubder Object => Visibility

iMac (Retina 5K, 27-inch, 2020)
3.6 GHz 10-Core Intel Core i9
128 GB 2667 MHz DDR4
AMD Radeon Pro 5500 XT 8 GB

  • For me the default box with viewport "Rendered" does not render in GPU mode at all and I get the error message

  • in CPU mode with lkight trees on or off it does render fine

iMac (Retina 5K, 27-inch, 2020) 3.6 GHz 10-Core Intel Core i9 128 GB 2667 MHz DDR4 AMD Radeon Pro 5500 XT 8 GB - For me the default box with viewport "Rendered" does not render in GPU mode at all and I get the error message - in CPU mode with lkight trees on or off it does render fine
Author

iMac (Retina 5K, 27-inch, 2020)
3.6 GHz 10-Core Intel Core i9
128 GB 2667 MHz DDR4
AMD Radeon Pro 5500 XT 8 GB

  • For me the default box with viewport "Rendered" does not render in GPU mode at all and I get the error message

  • in CPU mode with lkight trees on or off it does render fine

Check this build https://builder.blender.org/download/patch/PR108264/

> iMac (Retina 5K, 27-inch, 2020) > 3.6 GHz 10-Core Intel Core i9 > 128 GB 2667 MHz DDR4 > AMD Radeon Pro 5500 XT 8 GB > > - For me the default box with viewport "Rendered" does not render in GPU mode at all and I get the error message > > - in CPU mode with lkight trees on or off it does render fine Check this build https://builder.blender.org/download/patch/PR108264/

That does seem to fix it!

That does seem to fix it!

It should be fixed in the daily 4.0 build too, but you tested before it was updated to include the fix.

It should be fixed in the daily 4.0 build too, but you tested before it was updated to include the fix.

Thanks - I'll give that a try as well

Thanks - I'll give that a try as well
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108240
No description provided.