intern/cycles/kernel/integrator/shade_dedicated_light.h
@@ -4,9 +4,12 @@
 #pragma once
 
 #include "kernel/integrator/path_state.h"
-#include "kernel/integrator/shade_surface.h"
+
 #include "kernel/light/distant.h"
 #include "kernel/light/light.h"
+#include "kernel/light/sample.h"
+
+#include "kernel/integrator/shade_surface.h"
 
 CCL_NAMESPACE_BEGIN
 
